welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:7: error: illegal start of simple expression
while(!)avance(estSurBiscuit){
       ^Balin:12: error: ')' expected but '}' found.
	}
        ^